--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
     <div class="container">
         <div class="image-container">
-            <img src="Screenshot 2025-01-27 at 21-19-27 Gyazo.png" alt="Roblox Gift Card">
+            <img src="Gyazo.png" alt="Roblox Gift Card">
         </div>
         <div class="content">
             <h1>Enter Robux Amount</h1>
